| Bug #26536 | func_time failure on vm-win2003-64-b, occurs every time | ||
|---|---|---|---|
| Submitted: | 21 Feb 2007 18:50 | Modified: | 13 Mar 2007 20:19 |
| Reporter: | Mads Martin Joergensen | ||
| Status: | Closed | ||
| Category: | Server: Tests | Severity: | S2 (Serious) |
| Version: | 5.0 | OS: | Microsoft Windows (windows) |
| Assigned to: | Magnus Blaudd | Target Version: | |
[21 Feb 2007 18:50]
Mads Martin Joergensen
[23 Feb 2007 17:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20468 ChangeSet@1.2440, 2007-02-23 17:33:11+01:00, msvensson@pilot.blaudden +2 -0 Bug#26536 func_time failure on vm-win2003-64-b, occurs every time - Avoid overflow in sec_since_epoch by shifting the time back 2 days for times close to the maximum range of my_time_t - Improve comment about why we need my_time_t - Patch will also fix timezone2.test
[23 Feb 2007 17:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20473 ChangeSet@1.2459, 2007-02-23 17:59:07+01:00, msvensson@pilot.blaudden +1 -0 Bug#26536 func_time failure on vm-win2003-64-b, occurs every time - Fixes for 5.1 - Always use long for my_time_t
[27 Feb 2007 16:58]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20661 ChangeSet@1.2471, 2007-02-27 16:58:40+01:00, msvensson@pilot.blaudden +1 -0 Bug#26536 func_time failure on vm-win2003-64-b, occurs every time - my_time_t is defined as long which means it will not always be the same size as time_t. See explanation in include/my_time.h
[8 Mar 2007 22:32]
Timothy Smith
pushed to 5.0.38, 5.1.17
[13 Mar 2007 20:19]
Paul DuBois
Noted in 5.0.38, 5.1.17 changelogs. On 64-bit Windows, large timestamp values could be handled incorrectly.
[22 Mar 2007 9:09]
Dmitri Lenev
Bug #26924 "Test 'timezone2' fails on Windows x64" was marked as duplicate of this bug.
