Bug#26536 func_time failure on vm-win2003-64-b, occurs every time  - Fixes for 5.1  - Always use long for my_time_t

include/my_time.h:
  Use long for my_time_t
  It should be signed and hold seconds for 1902 -- 2038-01-19 range
  i.e at least a 32bit variable
  
  Using the system built in time_t is not an option as
  we rely on the above requirements in the time functions
  
  For example QNX has an unsigned time_t type